2016-02-28 S. Thiell <sthiell@stanford.edu>

	* Version 1.7.1 released.

2016-02-27 S. Thiell <sthiell@stanford.edu>

	* Worker/Tree.py: implement tree mode reverse copy using tar commands to
	fix clush --rcopy (ticket #290).

	* Communication.py: remove 76-char base64 encoding fixed length
	restriction for tree XML payload communication. The default max length is
	now 64K, which gives good results. The environment variable
	'CLUSTERSHELL_GW_B64_LINE_LENGTH' is propagated to gateways and may be
	used to override this value.

2016-02-12 S. Thiell <sthiell@stanford.edu>

	* RangeSet.py and NodeSet.py: fix bad 0-padding handling by RangeSetND or
	NodeSet objects in nD (ticket #286).

2016-02-09 S. Thiell <sthiell@stanford.edu>

	* NodeSet.py: fix parser issue when brackets were used with nodeset
	starting with a digit (ticket #284).

2015-11-30 S. Thiell <sthiell@stanford.edu>

	* CLI/Nodeset.py: fix --output-format / -O when folding (-f) by applying
	the provided format to each node (ticket #277).

2015-11-10 S. Thiell <sthiell@stanford.edu>

	* Version 1.7 released.

2015-11-01 S. Thiell <sthiell@stanford.edu>

	* Clush.py: added -P/--progress to force display of the live progress
	indicator and display global write bandwidth when writing standard input.

2015-10-25 S. Thiell <sthiell@stanford.edu>

	* Clush.py: added --option/-O clush.conf settings override (pull
	request #248).

2015-10-18 S. Thiell <sthiell@stanford.edu>

	* Clush.py: added --hostfile command line option to specify a file
	containing single hosts, node sets or node groups (ticket #235).

2015-10-16 S. Thiell <sthiell@stanford.edu>

	* NodeSet.py: enhancing parser to recognize nodesets with brackets having
	leading/trailing digits like in "prod-00[01-99]" (ticket #228).

2015-08-29 S. Thiell <sthiell@stanford.edu>

	* CLI/Nodeset.py: added --axis option to choose nD fold axis (ticket
	#269).
	* NodeSet.py: added fold_axis public member to NodeSetBase along with