@@ -1,3 +1,8 @@
+2016-04-24 S. Thiell <sthiell@stanford.edu>
+
+	* NodeSet.py: allow empty string as valid argument for empty NodeSet
+	objects (ticket #294).
+
 2016-02-28 S. Thiell <sthiell@stanford.edu>
 
 	* Version 1.7.1 released.
